Canary/istio-canary/istio.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python-service
  ports:
    - name: http
      nodePort: 31532
      port: 8080
      targetPort: 5000
  type: NodePort
