Canary/istio-canary/istio-canary-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: a-set-of-routing-rules-virtual-service # Virtual Service 이름을 작성한다.
  namespace: default
spec:
  hosts:
    - python-service.default.svc.cluster.local #Service DNS 작성해야 한다.
  http:
    - route:
        - destination:
            host: python-service.default.svc.cluster.local
            subset: safe
          weight: 100
        - destination:
            host: python-service.default.svc.cluster.local
            subset: risky
          weight: 0
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: python-service-service-destination
  namespace: default
spec:
  host: python-service # Service
  subsets:
    - labels:  # Selector
        version: safe # 파드의 label "safe"
      name: safe
    - labels:
        version: risky # 파드의 label "risky"
      name: risky
